objects/SDO_Sales_GPT_Record_Card__c.object
<CustomObject>
    <fields>
        <fullName>Card_Icon_Name__c</fullName>
        <label>Card Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Title__c</fullName>
        <label>Card Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_GPT_Simulated_Reply__c</fullName>
        <label>Simulated Reply</label>
        <referenceTo>SDO_Sales_GPT_Simulated_Reply__c</referenceTo>
        <relationshipLabel>Sales GPT Record Cards</relationshipLabel>
        <relationshipName>Sales_GPT_Reply_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales GPT Record Card</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Record Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales GPT Record Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>